refactor repository, model, controller
